<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">G-Tweet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_txt">Welcome</string>
    <string name="instructions_txt">"To begin please click on the Authorize "</string>
    <string name="btn_authorize">Authorize</string>
    <string name="title_activity_status_update">StatusUpdateActivity</string>
    <string name="btn_update_status">Update</string>
    <string name="txt_status_update">Update status</string>
    <string name="txt_hint">Please enter your status</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_service">Refresh</string>
    <string name="delay">Update refresh rate</string>
    <string name="delay_summary">How frequently to check for updates</string>
    <string name="preferences">Preferences</string>

    <string-array name="delayNames">
        <item>Test 30 sec</item>
        <item>Every fifteen minutes</item>
        <item>Every half hour</item>
        <item>Every hour</item>
        <item>Half a day</item>
        <item>Once a day</item>
        <item>Never</item>
    </string-array>
    <string-array name="delayValues">
        <item>30000</item>
        <item> 900000 </item>
        <item> 1800000 </item>
        <item> 3600000 </item>
        <item> 43200000  </item>
        <item> 86400000 </item>
        <item>0</item>
    </string-array>

    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="timeline">Timeline</string>

</resources>